--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ select {
     outline: none;
 }
 
+.mute.active {
+    background: rgb(170, 169, 169);
+}
+
 @keyframes playTrack {
     from{
         transform: scale(1);
